@@ -1,0 +1,52 @@
+<?xml version="1.0"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<project default="antunit" xmlns:au="antlib:org.apache.ant.antunit">
+  <import file="../antunit-base.xml" />
+
+  <property name="index.jar" location="index.jar" />
+
+  <target name="tearDown">
+    <delete file="${index.jar}" />
+  </target>
+
+  <target name="testIndexOnlyUpdate">
+    <jar destfile="${index.jar}" index="false">
+      <fileset dir="${basedir}" includes="*-test.xml" />
+    </jar>
+    <au:assertTrue>
+      <resourcecount count="0">
+        <restrict>
+          <zipentry zipfile="${index.jar}" name="META-INF/INDEX.LIST" />
+          <exists />
+        </restrict>
+      </resourcecount>
+    </au:assertTrue>
+    <jar destfile="${index.jar}" index="true" update="true">
+      <fileset dir="${basedir}" includes="*-test.xml" />
+    </jar>
+    <au:assertTrue>
+      <resourcecount count="1">
+        <restrict>
+          <zipentry zipfile="${index.jar}" name="META-INF/INDEX.LIST" />
+          <exists />
+        </restrict>
+      </resourcecount>
+    </au:assertTrue>
+  </target>
+
+</project>
